--- a/templates/h_record.html
+++ b/templates/h_record.html
@@ -31,10 +31,9 @@
                 </div>
             </div>
 
-            <hr>
 
 
-            <div class="form-group row justify-content-center">
+            <!-- <div class="form-group row justify-content-center">
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <table>
                         <tbody>
@@ -186,9 +185,30 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
+            </div> -->
 
-            <hr>
+
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {%for i in range(0, len(og_hdrinks))%}
+                        <tr>
+                            <th scope="row">{{i+1}}</th>
+                            <th >{{r_hdrinks[i]}}</th>
+                            <td><input type="number" class="form-control item_inc" name="{{og_hdrinks[i]}}"></td>
+                        </tr>
+                    {%endfor%}
+        
+                </tbody>
+            </table>
+
+
 
             <div class="form-group row">
                 <label for="Remark" class="col-2  item_label">Remark</label>
