--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>DrinkUp</title>
+    <title>King's Beer</title>
     <link rel="icon" type="image/x-icon" href="/static/img/beer.png">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/bootstrap.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/app_style.css') }}">
