--- a/templates/export.html
+++ b/templates/export.html
@@ -6,7 +6,7 @@
 
         <div class="form-group row">
 
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="col-sm-12 col-md-12 col-lg-4">
                 <table>
                     <tbody>
                         <tr>
@@ -17,7 +17,7 @@
                 </table>
             </div>
 
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="col-sm-12 col-md-12 col-lg-4">
                 <table>
                     <tbody>
                         <tr>
@@ -29,7 +29,7 @@
             </div>
 
 
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="col-sm-12 col-md-12 col-lg-4">
                 <table>
                     <tbody>
                         <tr>
@@ -47,7 +47,7 @@
 
 
 
-        <input type="submit" value="Export">
+        <input class="btn btn-primary" type="submit" value="Export">
     </form>
 </div>
 
