Add existing file

--- a/templates/export.html
+++ b/templates/export.html
@@ -36,6 +36,7 @@
                             <td><label for="OP_mode" class="col-sm-2  col-form-label">Mode</label></td>
                             <td><select class="form-control" name="OP_mode">
                                     <option>All</option>
+                                    <option>In Use</option>
                                     <option>Daily Sell</option>
                                     <option>New Stock</option>
                                 </select></td>
